# ModelFit

./: CMakeLists.txt
ModelFit/src/main/: main.cpp  main_calibrate.cpp
ModelFit/src/model_fit/: calibrate_geometry.cpp  calibrate_geometry.h  hand_geometry_mesh.cpp  hand_geometry_mesh.h  model_fit.cpp  model_fit.h  model_renderer.cpp  model_renderer.h
ModelFit/src/renderer/: open_gl_common.cpp  renderer.cpp
ModelFit/src/renderer/geometry/: bone_info.cpp
ModelFit/src/renderer/texture/: texture.cpp
kinect_interface/include/kinect_interface_primesense/: kinect_interface_primesense.h  open_ni_funcs.h
kinect_interface/include/math/: pso.h  pso_parallel.h
kinect_interface/src/file_io/: file_io.cpp
kinect_interface/src/kinect_interface_primesense/: hand_model_coeff.cpp
kinect_interface/src/math/: icp.cpp  pso.cpp
kinect_interface/src/string_util/: string_util.cpp
